# skipshit

./: LICENSE  README.md  pyproject.toml
docs/: ADDING_PROVIDERS.md  ARCHITECTURE.md
skipshit/: __init__.py  cli.py  config.py  models.py
skipshit/analyser/: __init__.py  base.py  chunker.py  claude.py  merger.py  openrouter.py  prompt.py
skipshit/transcript/: __init__.py  base.py  youtube_captions.py  yt_dlp.py
tests/: conftest.py  test_analyser.py  test_chunker.py  test_merger.py  test_transcript.py
